--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -9,6 +9,12 @@
 }
 
 /* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
+.icon-menu::before {
+  font-size: 30px;
+  float: right;
+  width: 50px;
+  height: 50px;
+}
 
 .main-nav {
   padding: 0.1em;
@@ -48,6 +54,26 @@
 .byline a {
   font-weight: bold;
   text-decoration: none;
+}
+
+@media screen and (min-width:700px){
+  .icon-menu {
+    display: none;
+  }
+  header ul {
+    display: block;
+    width: auto;
+  }
+  header li{
+    padding-left: 25px;
+    display: inline;
+  }
+  header a {
+    padding-left: 8%;
+  }
+  body {
+    background-color: white;
+  }
 }
 
 /* TODO: Now add styles for how things should look on a larger screen:
